--- a/index.html
+++ b/index.html
@@ -43,6 +43,33 @@
 			<p id="level-notification"></p>
 			<p id="start">Start</p>
 		</div>
+
+		<div class="reaper">
+			<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 261 215.1" style="enable-background:new 0 0 261 215.1;" xml:space="preserve">
+<g>
+	<path d="M72.2,79.7c-0.4,2.1-0.8,3.6-1.1,4.7c-0.3,1.1-0.8,2.4-1.5,3.9c-0.7,1.5-1.6,2.7-2.6,3.6c-0.7,0.6-1.5,1.1-2.3,1.5
+		l4.8-23.6h-3.5l-5,24.7c-1.5,0.2-2.9,0.3-4.3,0.2l6.1-29.7h-3.5l-6,29.1c-1.5-0.5-3-1.2-4.5-2.1l4.5-22.2h-3.5l-4,19.6
+		c-0.6-0.7-1.1-1.4-1.4-2.2c-0.6-1.2-0.9-2.6-1-4.3c-0.1-1.7,0-3.1,0.1-4.2c0.2-1.1,0.1-1.6,0.5-3.7l2.3-10h-3.4l-2.2,10.3
+		c-0.5,2.2-0.4,2.9-0.6,4c-0.2,1.2-0.2,2.7,0,4.4c0.2,1.8,0.7,3.4,1.5,5c1.3,2.3,3,4.2,5.2,5.7s4.7,2.5,7.3,3.1
+		c2.6,0.5,5.3,0.6,7.9,0.1c2.6-0.5,5-1.6,7-3.1c1.3-1.1,2.5-2.5,3.3-4c0.9-1.5,1.5-2.9,1.8-4c0.3-1.2,0.7-2.8,1.1-5.1l3.4-16.2h-3.4
+		L72.2,79.7z"/>
+	<path d="M124.5,79.7c-0.4,2.1-0.8,3.6-1.1,4.7c-0.3,1.1-0.8,2.4-1.5,3.9c-0.7,1.5-1.6,2.7-2.6,3.6c-0.7,0.6-1.5,1.1-2.3,1.5
+		l4.8-23.6h-3.5l-5,24.7c-1.5,0.2-2.9,0.3-4.3,0.2l6.1-29.7h-3.5l-6,29.1c-1.5-0.5-3-1.2-4.5-2.1l4.5-22.2H102l-4,19.6
+		c-0.6-0.7-1.1-1.4-1.4-2.2c-0.6-1.2-0.9-2.6-1-4.3c-0.1-1.7,0-3.1,0.1-4.2c0.2-1.1,0.1-1.6,0.5-3.7l2.3-10H95l-2.2,10.3
+		c-0.5,2.2-0.4,2.9-0.6,4c-0.2,1.2-0.2,2.7,0,4.4c0.2,1.8,0.7,3.4,1.5,5c1.3,2.3,3,4.2,5.2,5.7s4.7,2.5,7.3,3.1
+		c2.6,0.5,5.3,0.6,7.9,0.1c2.6-0.5,5-1.6,7-3.1c1.3-1.1,2.5-2.5,3.3-4c0.9-1.5,1.5-2.9,1.8-4c0.3-1.2,0.7-2.8,1.1-5.1l3.4-16.2h-3.4
+		L124.5,79.7z"/>
+	<path d="M245.1,81.4c-14.2-10-29.2-10.1-44.7-1.7c0-5.4,0-10.6,0-15.8c-5.3,0-10.3,0-15.5,0c0,18.4,0,36.6,0,55
+		c-4.5,0-8.8,0-13.5,0c0-1.2,0-2.2,0-3.2c-0.1-12.3,0.4-24.7-0.5-37C169.1,54.2,158,34.1,138.7,19C113.6-0.7,85.3-5.1,55.4,5.9
+		C21.5,18.5,0.1,50.3,0,86.5c0,42,0,84,0,126c0,0.9,0,1.8,0,2.6c57.3,0,114.3,0,171.6,0c0-27.3,0-54.5,0-81.6c4.6,0,8.9,0,13.5,0
+		c0,26.4,0,52.7,0,79c5.2,0,10.2,0,15.4,0c0-1.1,0-2.1,0-3.1c0-35.2,0-70.5-0.1-105.7c0-2,0.7-3,2.3-3.8c6.7-3.5,13.9-5.3,21.3-5.4
+		c13.9-0.2,26,4.4,35.2,15.2c0.4,0.5,0.9,0.9,1.7,1.8C260.2,98.6,255.1,88.5,245.1,81.4z M85.2,153.4c-37.2,0-67.3-30.1-67.3-67.3
+		c0-37.2,30.1-67.3,67.3-67.3s67.3,30.1,67.3,67.3C152.5,123.3,122.4,153.4,85.2,153.4z"/>
+	<polygon points="84.4,99.6 81.9,104.3 79.4,109 84.4,109 89.5,109 86.9,104.3 	"/>
+</g>
+</svg>
+		</div>
 		
 	</body>
 	
